Refactor URL handling in BlogPost and Strapi utility functions to improve consistency and add fallback for missing URLs. Update CSS styles for links in Header and globals.css for enhanced hover effects.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -40,7 +40,7 @@
   }
 
   a {
-    @apply text-primary hover:border-b-2 hover:border-primary transition-colors duration-200;
+    @apply text-primary  transition-colors duration-200;
   }
 }
 
